--- a/workspace/Commin_Pig_1000/app/src/main/res/values/colors.xml
+++ b/workspace/Commin_Pig_1000/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="MonkeyColor_GrayCD">#cdcdcd</color>
     <color name="MonkeyColor_GrayEE">#EEEEEE</color>
     <color name="MonkeyColor_WhiteFA">#FAFAFA</color>
+    <color name="MonkeyColor_WhiteORANGE">#FFCC00</color>
 
 
 
