--- a/workspace/Commin_Pig_1000/app/src/main/res/layout/chart_layout.xml
+++ b/workspace/Commin_Pig_1000/app/src/main/res/layout/chart_layout.xml
@@ -113,6 +113,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
+                android:numeric="integer"
                 android:background="@android:drawable/editbox_background_normal"
                 android:textSize="17sp" />
 
