--- a/workspace/Commin_Pig_1000/app/src/main/res/layout/item_chart_2.xml
+++ b/workspace/Commin_Pig_1000/app/src/main/res/layout/item_chart_2.xml
@@ -16,7 +16,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:textColor="@color/Color_BLACK"
+
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
 
         <TextView
